Second Big Copy From Local

--- a/src/main/04_best_models.ipynb
+++ b/src/main/04_best_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import os\n",
     "\n",
     "# Extra imports\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, f1_score\n",
     "from sklearn.model_selection import train_test_split, cross_validate\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "              max_iter=500, random_state=14)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,7 +245,8 @@
       "test_precision_macro    0.566\n",
       "test_recall_macro       0.509\n",
       "test_accuracy           0.715\n",
-      "dtype: float64\n"
+      "dtype: float64\n",
+      "The model predicts \"Black\" with 0.822627037392138 accuracy, \"White\" with 0.2337662337662338 accuracy and \"Other\" with 0.5849710982658959 accuracy\n"
      ]
     },
     {
@@ -286,7 +287,10 @@
     "cross_val_results = pd.DataFrame(cross_validate(model_best , X_train, y_train, cv = cv, \n",
     "                                                scoring = [ 'f1_macro', 'precision_macro', 'recall_macro', 'accuracy'] ))\n",
     "\n",
-    "print(cross_val_results[['test_f1_macro','test_precision_macro', 'test_recall_macro','test_accuracy']].mean())"
+    "print(cross_val_results[['test_f1_macro','test_precision_macro', 'test_recall_macro','test_accuracy']].mean())\n",
+    "\n",
+    "micro_f1 = f1_score(y_test, y_pred_test, average=None)\n",
+    "print('The model predicts \"Black\" with {} accuracy, \"White\" with {} accuracy and \"Other\" with {} accuracy'.format(micro_f1[0], micro_f1[1],micro_f1[2]))"
    ]
   },
   {
@@ -295,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'final_MLP_test.model'\n",
+    "filename = 'final_MLP.model'\n",
     "pickle.dump(model_best, open(os.path.join(model_path,filename), 'wb'))"
    ]
   },
