--- a/src/main/05_final_model_eval.ipynb
+++ b/src/main/05_final_model_eval.ipynb
@@ -164,7 +164,7 @@
     "print('Macro F1-score on final test set : {}'.format(macro_f1))\n",
     "\n",
     "micro_f1 = f1_score(y, y_pred, average=None)\n",
-    "print('The model predicts \"Black\" with {} accuracy, \"White\" with {} accuracy and \"Other\" with {} accuracy'.format(micro_f1[0], micro_f1[1],micro_f1[2]))"
+    "print('The model predicts \"Black\" with {} accuracy, \"Other\" with {} accuracy and \"White\" with {} accuracy'.format(micro_f1[0], micro_f1[1],micro_f1[2]))"
    ]
   }
  ],
