--- a/src/additional/mlp.ipynb
+++ b/src/additional/mlp.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"train_preprocessed.csv\", index_col=0)\n",
+    "df = pd.read_csv(os.path.join(model_path,\"train_preprocessed.csv\"), index_col=0))\n",
     "df['KMEANS_DEMEANOR'] = pd.Categorical(df['KMEANS_DEMEANOR'])"
    ]
   },
@@ -1003,7 +1003,7 @@
     "print('Confusion matrix of the TEST dataset')\n",
     "multiclass_confusion(y_pred_test,y_test)\n",
     "\n",
-    "cross_val_results = pd.DataFrame(cross_validate(model_nnet1 , X_train, y_train, cv = 5, \n",
+    "cross_val_results = pd.DataFrame(cross_validate(model_nnet1 , X_train, y_train, cv = cv, \n",
     "                                                scoring = [ 'f1_macro', 'precision_macro', 'recall_macro', 'accuracy'] ))\n",
     "\n",
     "results_df.loc['MLP[1]',:] = cross_val_results[['test_f1_macro',\n",
@@ -1151,7 +1151,7 @@
     "print('Confusion matrix of the TEST dataset')\n",
     "multiclass_confusion( y_pred_test,y_test)\n",
     "\n",
-    "cross_val_results = pd.DataFrame(cross_validate(model_nnet2 , X_train, y_train, cv = 5, \n",
+    "cross_val_results = pd.DataFrame(cross_validate(model_nnet2 , X_train, y_train, cv = cv, \n",
     "                                                scoring = [ 'f1_macro', 'precision_macro', 'recall_macro', 'accuracy'] ))\n",
     "\n",
     "results_df.loc['MLP[1]',:] = cross_val_results[['test_f1_macro',\n",
@@ -1361,7 +1361,7 @@
     "print('Confusion matrix of the TEST dataset')\n",
     "multiclass_confusion( y_pred_test,y_test)\n",
     "\n",
-    "cross_val_results = pd.DataFrame(cross_validate(model_mca_nnet , X_train, y_train, cv = 5, \n",
+    "cross_val_results = pd.DataFrame(cross_validate(model_mca_nnet , X_train, y_train, cv = cv, \n",
     "                                                scoring = [ 'f1_micro', 'precision_micro', 'recall_micro', 'accuracy'] ))\n",
     "\n",
     "results_df.loc['MLP[1]',:] = cross_val_results[['test_f1_micro',\n",
@@ -9056,7 +9056,7 @@
     "                   param_grid={'hidden_layer_sizes': sizes,\n",
     "                              'alpha': decays,\n",
     "                              'solver': solvers},\n",
-    "                   cv=10,\n",
+    "                   cv=cv,\n",
     "                   return_train_score=True,\n",
     "                   refit='f1_macro')\n",
     "\n",
@@ -9495,7 +9495,7 @@
     "print('Confusion matrix of the TEST dataset')\n",
     "multiclass_confusion( y_pred_test,y_test)\n",
     "\n",
-    "cross_val_results = pd.DataFrame(cross_validate(model_best , X_train, y_train, cv = 5, \n",
+    "cross_val_results = pd.DataFrame(cross_validate(model_best , X_train, y_train, cv = cv, \n",
     "                                                scoring = [ 'f1_macro', 'precision_macro', 'recall_macro', 'accuracy'] ))\n",
     "\n",
     "results_df.loc['MLP[1]',:] = cross_val_results[['test_f1_macro',\n",
