--- a/src/main/05_final_model_eval.ipynb
+++ b/src/main/05_final_model_eval.ipynb
@@ -82,9 +82,7 @@
     "            ], remainder='passthrough')\n",
     "\n",
     "        ct.fit_transform(X)\n",
-    "    return X, y\n",
-    "\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=14)"
+    "    return X, y"
    ]
   },
   {
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +134,7 @@
      "output_type": "stream",
      "text": [
       "Macro F1-score on final test set : 0.53432471529295\n",
-      "The model predicts \"Black\" with 0.8172205438066465 accuracy, \"White\" with 0.22988505747126434 accuracy and \"Other\" with 0.5558685446009389 accuracy\n"
+      "The model predicts \"Black\" with 0.8172205438066465 accuracy, \"Other\" with 0.22988505747126434 accuracy and \"White\" with 0.5558685446009389 accuracy\n"
      ]
     }
    ],
