--- a/src/additional/SVM.ipynb
+++ b/src/additional/SVM.ipynb
@@ -243,7 +243,7 @@
     "\n",
     "C_range = np.logspace(-3, 1, 5)\n",
     "param_grid = dict(C=C_range)\n",
-    "cv = RepeatedStratifiedKFold(n_splits = 5, n_repeats=3, random_state=14)\n",
+    "cv = RepeatedStratifiedKFold(n_splits = 5, n_repeats=3, random_state=14, shuffle=True)\n",
     "grid = GridSearchCV(linear, param_grid=param_grid, cv=cv, verbose=3)\n",
     "grid.fit(X_train, y_train)\n",
     "\n",
