--- a/src/additional/mlp.ipynb
+++ b/src/additional/mlp.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(os.path.join(model_path,\"train_preprocessed.csv\"), index_col=0))\n",
+    "df = pd.read_csv(os.path.join(model_path,\"train_preprocessed.csv\"), index_col=0)\n",
     "df['KMEANS_DEMEANOR'] = pd.Categorical(df['KMEANS_DEMEANOR'])"
    ]
   },
@@ -130,7 +130,7 @@
     "        ct.fit_transform(X_test)\n",
     "    return X_train, X_test, y_train, y_test\n",
     "\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=14)"
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=14, shuffle = True)"
    ]
   },
   {
