--- a/src/additional/randomForests.ipynb
+++ b/src/additional/randomForests.ipynb
@@ -391,7 +391,7 @@
     "}\n",
     "\n",
     "\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=14)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=14, shuffle = True)\n",
     "\n",
     "trc = GridSearchCV(estimator=model_tree,\n",
     "                   scoring=scoring_dict,\n",
